--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "bs4>=0.0.2",
     "ipykernel>=7.1.0",
+    "matplotlib>=3.10.7",
     "pandas>=2.3.3",
     "requests>=2.32.5",
+    "seaborn>=0.13.2",
 ]
